    - x2goserver-xsession/Makefile: same for rt-os.
    - x2goserver-xsession/etc/Xsession: add support for Slackware in the
      RPM-based section.
    - x2goserver-xsession/Makefile: generate RPM-based symlinks for Slackware.
    - x2goserver/bin/x2gopath.in: more quoting.
    - x2goserver/bin/x2gopath.in: avoid spurious warning messages by
      canonicalizing installed path values.
  * debian/control:
    + Build-depend upon lsb-release for distro version detection.
  * debian/x2goserver.manpages:
    + Install x2gocleansessions man page.
    + Install x2goupdateoptionsstring man page.
  * x2goserver.spec:
    + Install new x2goisint wrapper.
    + Install section 1 man pages.
    + Exclude x2goagent man page from x2goserver package.
    + Pass down LIBDIR via make calls, not by modifying all source files with
      sed.
  * debian/x2goserver.install:
    + Install bin/x2goupdateoptionsstring.
  * debian/rules:
    + Export and pass down LIBDIR.
    + Fix standalone make call by specifying PREFIX, NXLIBDIR and LIBDIR
      explicitly.
    + Fix quoting. Since make does not interpret single or double quotes, each
      string should only be quoted once (so that the shell can parse the
      quoted result). Quote the values in the variable directly and try not to
      "double-quote" the resulting string.

  [ Oleksandr Shneyder ]
  * New upstream version (4.1.0.4):
    - Add support for X2Go KDrive.
    - x2goruncommand: start Xsession on X2Go KDrive desktops.

  [ Tom Ruzicka ]
  * debian/po: Add Czech debconf translation.

  [ Ulrich Sibiller ]
  * New upstream version (4.1.0.4):
    - x2goserver-x2goagent/etc/keystrokes.cfg: sync with nx-libs 3.5.99.20.
      Previous version was broken and incomplete. Fixes: #1388.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Mon, 14 Jan 2019 16:33:04 +0100

x2goserver (4.1.0.3-0x2go1) unstable; urgency=medium

  [ Mike Gabriel ]
  * New upstream version (4.1.0.3)
    - x2goserver.service: Add Documentation= key.