@@ -145,6 +145,8 @@ x2goserver (4.1.0.4-0x2go1.1) UNRELEASED; urgency=medium
     - x2goserver/bin/x2gopath.in: more quoting.
     - x2goserver/bin/x2gopath.in: avoid spurious warning messages by
       canonicalizing installed path values.
+    - x2goserver/bin/x2gopath.in: avoid double slashes since we now know that
+      paths will be canonical.
   * debian/control:
     + Build-depend upon lsb-release for distro version detection.
   * debian/x2goserver.manpages:
